--- a/app/src/main/res/layout/reserve_car_bottom_sheet.xml
+++ b/app/src/main/res/layout/reserve_car_bottom_sheet.xml
@@ -113,52 +113,54 @@
         </LinearLayout>
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
-        <com.google.android.material.button.MaterialButton
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/light_gray"
-            android:layout_weight="1"
-            app:cornerRadius="5dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:text="Bekijk prijzen"
-            android:textColor="@color/black"
-            app:icon="@drawable/money"
-            app:iconTint="@color/black"
-            app:iconGravity="textStart"/>
 
-
-        <com.google.android.material.button.MaterialButton
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/light_gray"
-            android:layout_weight="1"
-            app:cornerRadius="5dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:text="plan uw reis"
-            android:textColor="@color/black"
-            app:icon="@drawable/route"
-            app:iconTint="@color/black"
-            app:iconGravity="textStart"
-            />
-    </LinearLayout>
         <com.google.android.material.button.MaterialButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/orange"
             app:cornerRadius="5dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:text="Reserveer"
             android:textColor="@color/white"
             />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+            <com.google.android.material.button.MaterialButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/light_gray"
+                android:layout_weight="1"
+                app:cornerRadius="5dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:text="Bekijk prijzen"
+                android:textColor="@color/black"
+                app:icon="@drawable/money"
+                app:iconTint="@color/black"
+                app:iconGravity="textStart"/>
+
+
+            <com.google.android.material.button.MaterialButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/light_gray"
+                android:layout_weight="1"
+                app:cornerRadius="5dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:text="plan uw reis"
+                android:textColor="@color/black"
+                app:icon="@drawable/route"
+                app:iconTint="@color/black"
+                app:iconGravity="textStart"
+                />
+        </LinearLayout>
 
     </LinearLayout>
 
