--- a/app/src/main/res/layout/reserve_car_bottom_sheet.xml
+++ b/app/src/main/res/layout/reserve_car_bottom_sheet.xml
@@ -36,16 +36,16 @@
             android:orientation="vertical"
             >
             <ImageView
-                android:src="@drawable/polestar1"
+                android:id="@+id/carModelImg"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginBottom="10dp"
                 />
 
             <TextView
+                android:id="@+id/carModelText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Polestar 1"
                 android:textAlignment="center"
                 />
 
@@ -65,6 +65,7 @@
                 android:layout_marginBottom="10dp"
                 />
             <TextView
+                android:id="@+id/battery"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="60%"
@@ -74,6 +75,7 @@
                 />
 
             <TextView
+                android:id="@+id/batteryRange"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="250km"
@@ -95,12 +97,13 @@
                 />
 
             <TextView
+                android:id="@+id/walkingRange"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="1,2 km"
                 android:textAlignment="center"
                 android:layout_marginBottom="2dp"
                 android:textColor="@color/gray"
+                android:text="1.2km"
                 />
 
             <TextView
@@ -131,22 +134,25 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             >
+
             <com.google.android.material.button.MaterialButton
+                android:id="@+id/priceButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/light_gray"
-                android:layout_weight="1"
-                app:cornerRadius="5dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:backgroundTint="@color/light_gray"
                 android:text="Bekijk prijzen"
                 android:textColor="@color/black"
+                app:cornerRadius="5dp"
                 app:icon="@drawable/money"
-                app:iconTint="@color/black"
-                app:iconGravity="textStart"/>
+                app:iconGravity="textStart"
+                app:iconTint="@color/black" />
 
 
             <com.google.android.material.button.MaterialButton
+                android:id="@+id/routeButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/light_gray"
