--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,15 +2,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/listFragment"
+        android:icon="@drawable/list"
+        android:title="List" />
+    <item
         android:id="@+id/mapsFragment"
-        android:icon="@drawable/map"
+        android:icon="@drawable/mapicon"
         android:title="Map" />
     <item
         android:id="@+id/profileFragment"
         android:icon="@drawable/baseline_person_24"
         android:title="Profile" />
-    <item
-        android:id="@+id/settingsFragment"
-        android:icon="@drawable/baseline_settings_24"
-        android:title="Settings" />
+
 </menu>
