--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -22,6 +22,42 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+
+
+            <EditText
+                android:id="@+id/query_text"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:autofillHints="@null"
+                android:background="#fff"
+                android:elevation="4dp"
+                android:hint="Zoek..."
+                android:inputType="text"
+                android:minHeight="?actionBarSize"
+                android:paddingHorizontal="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                />
+
+            <com.mapbox.search.ui.view.SearchResultsView
+                android:id="@+id/search_results_view"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="16dp"
+                android:background="#fff"
+                android:clipToPadding="false"
+                android:elevation="4dp"
+                android:paddingTop="8dp"
+                android:paddingBottom="22dp"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/query_text"
+                />
+
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/floatingActionButton"
                 android:layout_width="wrap_content"
