--- a/app/src/main/res/layout/reserve_car_plan_route_bottom_sheet.xml
+++ b/app/src/main/res/layout/reserve_car_plan_route_bottom_sheet.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     app:cardCornerRadius="16dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -12,184 +12,39 @@
         android:layout_marginBottom="30dp"
         >
 
-        <ImageView
-            android:id="@+id/routeBack"
-            android:layout_width="wrap_content"
-            android:layout_height="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginBottom="15dp"
-            android:src="@drawable/baseline_arrow_back_ios_new_24"
-            />
-
-        <FrameLayout
-            android:background="@drawable/card_edge"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp">
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:cardCornerRadius="10dp"
-                android:layout_margin="2dp"
-                app:cardElevation="0dp"
-                >
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="5dp"
-                    android:weightSum="1"
-                    >
-
-                    <ImageView
-                        android:layout_weight="0.07"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:src="@drawable/fromto"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginBottom="10dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
-                        />
-
-                <LinearLayout
-                    android:layout_weight="0.83"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    >
-                <EditText
-                    android:id="@+id/from"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Achtseweg Zuid 155, Eindhoven, NL"
-                    android:inputType="text"
-                    android:background="@null"
-                    android:layout_marginTop="10dp"
-                    android:enabled="false"
-                    />
-                    <View
-                        android:layout_width="fill_parent"
-                        android:layout_height="1dp"
-                        android:background="@color/light_gray"
-                        android:layout_marginBottom="5dp"
-                        android:layout_marginTop="5dp"
-                        />
-
-                <EditText
-                    android:id="@+id/to"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="zoek..."
-                    android:background="@null"
-                    android:inputType="text"
-                    android:layout_marginBottom="10dp"
-                    />
-                </LinearLayout>
-                    <ImageView
-                        android:layout_weight="0.10"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:src="@drawable/changedirection"
-                        android:layout_marginLeft="15dp"
-                        android:layout_marginRight="5dp"
-                        />
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-        </FrameLayout>
-
-        <LinearLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:orientation="horizontal"
+        <EditText
+            android:id="@+id/query_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:layout_marginBottom="30dp"
-
-            >
-
-            <LinearLayout
-                android:layout_width="0dip"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                >
-                <ImageView
-                    android:src="@drawable/clock"
-                    android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:layout_marginBottom="10dp"
-                    />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="1 uur 10 min"
-                    android:textAlignment="center"
-                    />
-
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="0dip"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                >
-                <ImageView
-                    android:src="@drawable/money"
-                    android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:layout_marginBottom="10dp"
-                    />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="€28,86"
-                    android:textAlignment="center"
-                    />
-
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="0dip"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                >
-                <ImageView
-                    android:src="@drawable/c02"
-                    android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:layout_marginBottom="10dp"
-                    />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="31,265kg"
-                    android:textAlignment="center"
-                    />
-
-            </LinearLayout>
-        </LinearLayout>
-
-
-        <com.google.android.material.button.MaterialButton
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/orange"
-            app:cornerRadius="5dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:text="Reserveer en start uw reis"
-            android:textColor="@color/white"
+            android:layout_margin="16dp"
+            android:autofillHints="@null"
+            android:background="#fff"
+            android:elevation="4dp"
+            android:hint="Huisnummer, straatnaam"
+            android:inputType="text"
+            android:minHeight="?actionBarSize"
+            android:paddingHorizontal="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             />
+
+
     </LinearLayout>
-
+    <com.mapbox.search.ui.view.SearchResultsView
+        android:id="@+id/search_results_view"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="16dp"
+        android:background="#fff"
+        android:clipToPadding="false"
+        android:elevation="4dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="22dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/query_text"
+        />
 </androidx.cardview.widget.CardView>
