--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -22,22 +22,50 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <EditText
-                android:id="@+id/query_text"
-                android:layout_width="0dp"
+            <RelativeLayout
+                android:id="@+id/searchLayout"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:autofillHints="@null"
-                android:background="#fff"
-                android:elevation="4dp"
-                android:hint="Zoek..."
-                android:inputType="text"
-                android:minHeight="?actionBarSize"
-                android:paddingHorizontal="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                />
+               >
+
+                <EditText
+                    android:id="@+id/query_text"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="16dp"
+                    android:autofillHints="@null"
+                    android:background="@drawable/card_edge"
+                    android:hint="Zoek..."
+                    android:inputType="text"
+                    android:minHeight="?actionBarSize"
+                    android:paddingHorizontal="16dp"
+                    android:elevation="4dp"
+
+                    />
+
+                <ImageButton
+                    android:id="@+id/closeSearch"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="32dp"
+                    android:layout_marginRight="61dp"
+                    android:layout_marginBottom="5dp"
+                    android:elevation="4dp"
+                    android:src="@drawable/baseline_close_24"
+                    android:background="#fff"
+                    android:text="Button"
+                    />
+
+            </RelativeLayout>
+
+
 
             <com.mapbox.search.ui.view.SearchResultsView
                 android:id="@+id/search_results_view"
@@ -45,7 +73,7 @@
                 android:layout_height="0dp"
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="16dp"
-                android:background="#fff"
+                android:background="@drawable/card_edge"
                 android:clipToPadding="false"
                 android:elevation="4dp"
                 android:paddingTop="8dp"
@@ -53,7 +81,7 @@
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/query_text"
+                app:layout_constraintTop_toBottomOf="@+id/searchLayout"
                 />
 
 
