--- a/app/src/main/res/layout/reserve_car_bottom_sheet_confirmation.xml
+++ b/app/src/main/res/layout/reserve_car_bottom_sheet_confirmation.xml
@@ -109,6 +109,7 @@
                 />
 
             <TextView
+                android:id="@+id/walkingTime"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="10 min"
