--- a/app/src/main/res/layout/reserve_car_plan_route_bottom_sheet.xml
+++ b/app/src/main/res/layout/reserve_car_plan_route_bottom_sheet.xml
@@ -8,9 +8,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:layout_marginBottom="30dp"
-        >
+        android:orientation="vertical">
 
         <EditText
             android:id="@+id/query_text"
@@ -26,11 +25,11 @@
             android:paddingHorizontal="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </LinearLayout>
+
     <com.mapbox.search.ui.view.SearchResultsView
         android:id="@+id/search_results_view"
         android:layout_width="match_parent"
